--- a/src/styles/EditorPage.css
+++ b/src/styles/EditorPage.css
@@ -1,19 +1,19 @@
 .editor-page {
   display: flex;
   height: 100vh;
-  background-color: #eae8e8;
+  background-color: #171717;
 }
 
-/* Sidebar: 1/3 of the page */
+
 .sidebar {
   width: 25%;
-  background-color: #2c3e50;
+  background-color: #171717;
   color: white;
   padding: 20px;
   min-width: 250px;
 }
 
-/* Editor Container: 2/3 of the page */
+
 .editor-container {
   width: 75%;
   display: flex;
@@ -21,7 +21,7 @@
   padding: 20px;
 }
 
-/* Wrapper for Editor and Output (Equal Vertical Split) */
+
 .editor-output-wrapper {
   flex: 1;
   display: flex;
@@ -29,34 +29,34 @@
   gap: 10px;
 }
 
-/* Editor Section (Takes Half of the Space) */
+
 .editor-section {
   flex: 1;
   display: flex;
   gap: 20px;
-  background: white;
+  background: #303030;
   padding: 15px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Editor Panel on the right */
+
 .editor-panel-wrapper {
   width: 250px;
   min-width: 200px;
 }
 
-/* Query Output (Takes Half of the Space) */
+
 .query-output-section {
   flex: 1;
-  /* background: white; */
+  
   padding: 15px;
   border-radius: 5px;
-  /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); */
+  
   overflow: auto;
 }
 
-/* Responsive Design */
+
 @media (max-width: 900px) {
   .editor-page {
     flex-direction: column;
