--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -9,14 +9,16 @@
 
 .section {
   margin-bottom: 20px;
+  
 }
 
 h2 {
-  font-size: 18px;
+  font-size: 24px;
   font-weight: bold;
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 14px;
+  padding: 18;
 }
 
 .icon {
