--- a/src/styles/EditorPanel.css
+++ b/src/styles/EditorPanel.css
@@ -1,14 +1,17 @@
+
 .editor-panel {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-top: 25px;
 }
+
 .error-message {
   margin-bottom: 20px;
 }
 
 .alert.alert-danger {
-  background-color: #11141C ;
+  background-color: #11141C;
   color: white;
   padding: 10px;
   border-radius: 5px;
@@ -23,11 +26,14 @@
   justify-content: center;
   gap: 8px;
   width: 100%;
+  max-width: 300px;
   padding: 10px;
   font-size: 16px;
   border: none;
   cursor: pointer;
   border-radius: 5px;
+  transition: 0.3s;
+  margin: 5px;
 }
 
 .panel-button .icon {
@@ -51,4 +57,119 @@
 
 .panel-button:hover {
   opacity: 0.75;
+}
+
+
+@media (max-width: 900px) {
+  .editor-panel {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 5px;
+  }
+
+  .panel-button {
+    padding: 10px;
+    font-size: 14px;
+    margin: 8px;
+    width: 45%;
+    max-width: none;
+  }
+
+  .panel-button .icon {
+    font-size: 16px;
+  }
+
+  .alert.alert-danger {
+    font-size: 14px;
+    padding: 8px;
+  }
+}
+
+
+@media (max-width: 700px) {
+  .editor-panel {
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    flex-wrap: nowrap; 
+    margin-top: -15px;
+    overflow-wrap: normal;
+  }
+
+  .panel-button {
+    width: 50%;
+    flex: 1; 
+    font-size: 14px;
+    padding: 8px;
+  }
+
+  .panel-button .icon {
+    font-size: 14px;
+  }
+
+  .alert.alert-danger {
+    font-size: 13px;
+    padding: 6px;
+  }
+}
+
+
+@media (max-width: 500px) {
+  .editor-panel {
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    flex-wrap: nowrap; 
+    margin-top: -15px;
+    overflow-wrap: normal;
+  }
+  .panel-button {
+    font-size: 13px;
+    padding: 7px;
+    font-size: 13px;
+  }
+
+  .panel-button .icon {
+    font-size: 12px;
+  }
+
+  .alert.alert-danger {
+    font-size: 12px;
+    padding: 5px;
+  }
+}
+
+
+@media (max-width: 400px) {
+  .editor-panel {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    flex-wrap: nowrap; 
+    margin-top: -15px;
+    overflow-wrap: normal;
+  }
+  .panel-button {
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  .panel-button .icon {
+    font-size: 10px;
+  }
+
+  .alert.alert-danger {
+    font-size: 12px;
+    padding: 4px;
+  }
 }
