--- a/src/styles/QueryOutput.css
+++ b/src/styles/QueryOutput.css
@@ -4,7 +4,7 @@
   padding: 10px;
   background-color: #171717;
   border-radius: 5px;
-  max-height: 250px;
+  max-height: 70vh;
   overflow-y: auto;
   position: relative;
   color: #e0e0e0;
@@ -24,7 +24,7 @@
 }
 
 .query-table-container {
-  max-height: 200px;
+  max-height: 70vh;
   overflow-y: auto;
   border: 1px solid #303030;
   border-radius: 5px;
